[project]
name = "mom-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.2",
    "numpy==2.4.2",
    "pandas>=3.0.0",
    "pandoc>=2.4",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
]

[tool.setuptools]
packages = []
